--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ">=4.0.0 <6.0.0"
+  get:
+    git: https://github.com/Andrflor/getx.git
   path_provider: ^2.0.1
   #platform_info: ^3.0.0-nullsafety.1
 
