--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   get:
-    git: https://github.com/Andrflor/getx.git
+    git:
+      url: https://github.com/Andrflor/getx.git
+      ref: main
+
   path_provider: ^2.0.1
   #platform_info: ^3.0.0-nullsafety.1
 
