--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   get:
     git:
       url: https://github.com/Andrflor/getx.git
-      ref: main
+      ref: v4
 
   path_provider: ^2.0.1
   #platform_info: ^3.0.0-nullsafety.1
